<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:padding="16dp">


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/categoryTitleText"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:text="Category"/>

    <EditText
            android:id="@+id/categoryEditText"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:nextFocusDown="@id/titleEditText"
            android:inputType="none"
            android:editable="false"
            app:layout_constraintTop_toBottomOf="@id/categoryTitleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/categoryEditText"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="start"
            android:text="@string/event_title"/>
    <EditText
            android:id="@+id/titleEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:hint="Max 50 chars"
            android:nextFocusDown="@id/descEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleText"/>

    <TextView
            android:id="@+id/descText"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/titleEditText"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="start"
            android:text="@string/event_description"/>

    <EditText
            android:id="@+id/descEditText"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textLongMessage"
            android:hint="Max 200 chars"
            android:imeOptions="actionDone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descText"/>

    <TextView
            android:id="@+id/startDateText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:drawableEnd="@drawable/ic_date_range_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/label_startDate"
            app:layout_constraintTop_toBottomOf="@id/descEditText"/>

    <TextView
            android:id="@+id/endDateText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:drawableEnd="@drawable/ic_date_range_black_24dp"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/label_endDate"
            app:layout_constraintTop_toBottomOf="@id/startDateText"/>

    <Button
            android:id="@+id/confirmButton"
            android:layout_marginTop="32dp"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/endDateText"
            android:text="@string/button_createEvent"/>

</androidx.constraintlayout.widget.ConstraintLayout>